k8s/cilium-and-kind/test-deployment-with-lb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-local
  namespace: default
  labels:
    app: my-local-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-local-app
  template:
    metadata:
      labels:
        app: my-local-app
    spec:
      containers:
      - name: agnhost
        image: registry.k8s.io/e2e-test-images/agnhost:2.40
        args:
          - netexec
          - --http-port=8080
          - --udp-port=8080
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: lb-service-local
  namespace: default
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: my-local-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8080
